fixed overflow on mobile

--- a/src/Projects/style/modal.css
+++ b/src/Projects/style/modal.css
@@ -76,7 +76,7 @@ h2 {
   margin-right: 0.5rem;
 }
 
-@media (max-width: 480px) {
+@media (max-width: 489px) {
   .modal_content {
     width: 100%;
     height: 100vh;
